# fisherman

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  SKILL.md  install.sh  pyproject.toml  uninstall.sh  upgrade.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: attestation-monitor.yml  bootstrap-cvm.yml  ci.yml  contract-deploy.yml  deploy-cvm.yml  docker-publish.yml  harness-ci.yml  macos-release.yml  update-fisherman-dns.yml  website.yml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: FishermanAppAuth.sol
contracts/test/: FishermanAppAuth.t.sol
docs/: cloud-operations.md  context-migration.md  desktop-cross-platform-alpha.md  drive-setup.md  ios-streaming-spec.md  macos-dmg-release.md  macos-release-signing.md  menubar-todo.md  privacy-threat-model.md  tee-deployment.md
docs/archive/: ios-streaming-spec.md
fisherman/: __main__.py  agent_loop.py  attestation.py  audio_store.py  blob_store.py  capture.py  cleanup.py  cli.py  cloud_trust.py  config.py  context_home.py  control.py  daemon.py  deputy.py  desktop_shell.py  differ.py  frame_store.py  friends.py  keys.py  ledger.py  meeting_detector.py  ocr.py  power.py  privacy.py  processor.py  relay_client.py  router.py  rpc.py  screenpipe_capture.py  storage_config.py  streamer.py  sync.py  timeline.py  types.py  upgrade.py  upload_queue.py  vlm.py
fisherman/platform/: linux.py  (+7 more)
harness/: .gitignore  AUDIT.html  EVENT_CONTEXT_PACKET_ARCHITECTURE.md  HANDOFF.md  HARNESS_AUDIT_2026-05-22.md  HARNESS_CAPSULE_GUIDE.md  PROAGENTBENCH_RIGOR_PLAN.md  README.md  pyproject.toml
harness/eval/: replay.py  score.py
harness/harness/: api_server.py  app_identity.py  candidate.py  cli.py  config.py  context_packets.py  critic.py  curation.py  daemon.py  dashboard_ui.py  dataset.py  eval_report.py  experiments.py  fisherman_client.py  frozen_eval.py  gate.py  goal_interview.py  image_redaction.py  implicit.py  information_diet.py  kg_priors.py  label_ui.py  long_term_memory.py  memory.py  metrics.py  model_audit.py  next_step.py  policy_contract.py  privacy.py  push.py  realizer.py  reward.py  scene.py  scene_vlm.py  schemas.py  server.py  service.py  shadow_eval.py  sql_store.py  store.py  (+3 more)
harness/notch/: Package.swift  build.sh
harness/notch/Sources/HarnessNotch/: App.swift  HarnessAPI.swift  HarnessClient.swift  HarnessExpanded.swift  HarnessState.swift  MenuBarController.swift  NotchCoordinator.swift  SettingsModel.swift  SettingsView.swift
harness/policies/: llm_icl_v0.py  rule_v0.py
harness/prompts/critic/: productivity_v1.md
harness/prompts/realizer/: goal_aware_v1.md
harness/prompts/realizer/_archive/: README.md  focus_nudge_v1.md  offer_research_v1.md  summarize_session_v1.md  surface_open_thread_v1.md
harness/prompts/scene_tagger/: llm_fallback_v1.md
harness/tests/: test_smoke.py
menubar/: AppIcon.icns  Info.plist  Package.resolved  Package.swift  build.sh  generate_icon.py
mirror/: cli.py  cloud_gateway.py  query.py  requirements.txt  server.py  tappd.py
relay/: server.py
scripts/: bootstrap-linux-alpha.sh  bootstrap-user-install.sh  bootstrap-windows-alpha.ps1  build-macos-dmg.sh  smoke-macos-dmg.sh  start_current_stack.py
server/: .env.example  CLAUDE.md  Dockerfile  README.md  auth.py  bootstrap-agent.sh  cli.py  cloud_ingest.py  crypto.py  docker-compose.yml  fisherman-ingest.service  ingest-watchdog.sh  ingest.py  install-service.sh  pg_backup.py  pyproject.toml  schema.sql  setup.sh  storage.py
skills/: README.md  server-agent-setup-prompt.md
tests/: e2e_full_flow.py  mock_tappd.py  test_attestation.py  test_backend_mode.py  test_cloud_gateway.py  test_cloud_tenancy.py  test_cloud_trust.py  test_config_identity.py  test_context_home.py  test_control.py  test_daemon_presence.py  test_end_to_end.py  test_frame_store.py  test_friend_cli.py  test_ingest_startup.py  test_mirror_tls.py  test_pdf_aware_ocr.py  test_platform_support.py  test_processor.py  test_relay_store.py  test_screenpipe_capture.py  test_start_current_stack.py  test_storage_config.py  test_streamer.py  test_upgrade.py  test_upload_queue.py
website/: README.md  index.html  package-lock.json  package.json
(+48 files in other folders)
