[project]
name = "fisherman-harness"
version = "0.1.0"
description = "Proactive presence harness — when-to-ping gate + agentic realizer over Fisherman's screen context"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10",
    "click>=8.0",
    "structlog>=24.0",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "policies", "eval"]
include = ["prompts/**/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
